--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -537,7 +537,7 @@
              min-height: 30px;
              z-index: 1;
              position: relative;
-             background-color: #52b04c;
+             background-color: #FD003D;
              text-align: center;
              font-weight: 600;
              font-size: 12px;
@@ -546,12 +546,13 @@
              }
              & svg {
                  margin: 0 .5em;
+                 color: #000;
              }
              &::before {
                  border-left: 15px solid transparent;
-                 border-right: 30px solid #52b04c;
+                 border-right: 30px solid #FD003D;
                  border-top: 32px solid transparent;
-                 border-bottom: 60px solid #52b04c;
+                 border-bottom: 60px solid #FD003D;
                  content: "";
                  position: absolute;
                  left: -45px;
@@ -563,7 +564,7 @@
          display: block;
          padding: 1em;
          width: 100%;
-         border-bottom: 2px solid #52b04c;
+         border-bottom: 2px solid #FD003D;
          & img {
              display: block;
              width: 200px;
@@ -576,7 +577,7 @@
              padding: .25em 1em;
              font-size: 17px;
              &:hover {
-                 background-color: #52b04c;
+                 background-color: #FD003D;
                  border-radius: 5px;
              }
          }
@@ -1488,3 +1489,243 @@
    }
  }
  
+ .flash {
+    margin: 10px 0;
+    padding: 12px;
+  
+    &__success {
+      color: #4F8A10;
+      background-color: #DFF2BF;
+  
+      &::before {
+        content: '\2713';
+        margin-right: 5px;
+      }
+    }
+  
+    &__info {
+      color: #00529B;
+      background-color: #BDE5F8;
+  
+      &::before {
+        content: '!';
+        margin-right: 5px;
+      }
+    }
+  
+    &__warning {
+      color: #9F6000;
+      background-color: #FEEFB3;
+  
+      &::before {
+        content: '!';
+        margin-right: 5px;
+      }
+    }
+  
+    &__error {
+      color: #D8000C;
+      background-color: #FFBABA;
+  
+      &::before {
+        content: '\2717';
+        margin-right: 5px;
+      }
+    }
+  
+    &__notice {
+      color: #D8000C;
+      background-color: #FFBABA;
+  
+      &::before {
+        content: '\2717';
+        margin-right: 5px;
+      }
+    }
+  }
+  
+  .ads {
+    &__title {
+        margin: 0 0 15px;
+        font-size: 18px;
+        line-height: 18px;
+        font-weight: 600;
+    }
+    &__content {
+        font-size: 14px;
+        span {
+            font-weight: 600;
+            font-size: 16px;
+            color: #FD003D;
+        }
+    }
+    .ads__slider {
+        .item-details {
+            background-color: #fff;
+            padding: 20px 10px;
+            text-align: left;
+        }
+        .item {
+            text-align: center;
+            margin-bottom: 80px;
+        }
+    }
+    .owl-carousel .owl-nav [class*='owl-'] {
+        -webkit-transition: all .3s ease;
+        transition: all .3s ease;
+        font-size: 25px;
+        background-color: rgba(253, 0, 61, .3);
+    }
+    .owl-carousel .owl-nav.disabled {
+        display: block;
+    }
+    .owl-carousel .owl-nav [class*='owl-'].disabled:hover {
+        background-color: #D6D6D6;
+    }
+    .owl-carousel {
+        position: relative;
+    }
+    .owl-carousel .owl-next,
+    .owl-carousel .owl-prev {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        border-radius: 50%;
+        position: absolute;
+        top: 30%;
+        font-size: 20px;
+        color: #fff;
+        border: 1px solid #ddd;
+        text-align: center;
+        & svg {
+            color: #fff;
+        }
+        &:hover {
+            background-color: rgba(253, 0, 61, .7);
+        }
+    }
+    .owl-carousel .owl-prev {
+        left: -37px;
+        border-radius: 70% 20% 20% 70%;
+    }
+    .owl-carousel .owl-next {
+        right: -37px;
+        border-radius: 20% 70% 70% 20%;
+    }
+}
+
+.categories {
+    &__wrapper {
+        & .row:first-child {
+            margin-bottom: 2em;
+        }
+        &__img {
+            height: 200px;
+            background-size: contain;
+            & p {
+                color: #fff;
+                position: relative;
+                font-weight: 600;
+                top: 50%;
+                transform: translateY(-50%);
+                margin: 0 2em;
+                padding: .5em;
+                background: #FD003D;
+                background: linear-gradient(-180deg, #f55c5c 0%, #FD003D 90%);
+            }
+            &--1 {
+                background-image: url(../images/bedcover-1.jpg);
+            }
+            &--2 {
+                background-image: url(../images/bedcover-1.jpg);
+            }
+        }
+        &__content {
+            &__title {
+                font-size: 18px;
+            }
+            & a {
+                padding: .25em;
+                overflow: hidden;
+                display: block;
+                border-bottom: 1px solid#e7e7e7;
+                & p {
+                    font-size: 16px;
+                    & .right-arrow {
+                        float: right;
+                        font-weight: 600;
+                    }
+                }
+                &:hover {
+                    background-color: #e7e7e7;
+                }
+            }
+        }
+    }
+}
+
+.brands {
+    position: relative;
+    &__title {
+        font-weight: 600;
+        font-size: 20px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        position: absolute;
+        bottom: -60px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 3px;
+        background: rgba(255, 255, 255, .95);
+        padding: 1em;
+        &:hover {
+            background: rgba(255, 255, 255, 1);
+        }
+    }
+}
+
+.all-products {
+    margin: 1.5em auto;
+    p {
+        margin-bottom: 1em;
+    }
+}
+
+
+.flash-sales {
+    .flash-sales__timer {
+        .flash-sales__timer__countdown {
+            margin: auto .75em;
+            transition: padding 1s ease-in-out;
+            font-weight: 700;
+            font-size: 18px;
+            color: #FD003D;
+            .flash-sales__timer__countdown__content {
+                padding: .25em;
+                border-radius: 3px;
+            }
+            #flash-sales__timer__countdown__day {
+                background: #FD003D;
+                background: linear-gradient(-180deg, #f55c5c 0%, #FD003D 90%);
+                color: #fff;
+            }
+            #flash-sales__timer__countdown__hour {
+                background: #FD003D;
+                background: linear-gradient(-180deg, #f55c5c 0%, #FD003D 90%);
+                color: #fff;
+            }
+            #flash-sales__timer__countdown__minute {
+                background: #FD003D;
+                background: linear-gradient(-180deg, #f55c5c 0%, #FD003D 90%);
+                color: #fff;
+            }
+            #flash-sales__timer__countdown__second {
+                background: #FD003D;
+                background: linear-gradient(-180deg, #f55c5c 0%, #FD003D 90%);
+                color: #fff;
+            }
+        }
+    }
+    .flash-sales__container {
+        margin: 1em 0;
+    }
+}
