--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,11 +20,15 @@ html
     meta content="yes" name="apple-touch-fullscreen" /
     meta name="apple-mobile-web-app-status-bar-style" content="black" /
 
-    link rel="shortcut icon" href="logo-main.png" /
+    / link rel="shortcut icon" href="logo-main.png" /
 
+    = stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    = stylesheet_link_tag "https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"
     = stylesheet_link_tag "application", media: "all"
 
-    / = javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+    = javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+    = javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    = javascript_include_tag "https://use.fontawesome.com/releases/v5.5.0/js/all.js"
     = javascript_pack_tag 'application', defer: true
 
   body class=("#{controller_name} #{action_name}")
@@ -36,23 +40,23 @@ html
               .header__info
                 .col-1.no-padding
                   .header__info__text
-                    | Berita Terkini
+                    | Pengumuman
                 .col-8
                   .header__info__newsticker
                     .header__info__newsticker__item
-                      | Selamat datang di web Badan Pengembangan dan Pemberdayaan Sumber Daya Manusia Kesehatan.
+                      | Tanggal 20 Desember 2018 akan diadakan diskon besar-besaran!
                     .header__info__newsticker__item
-                      | Hubungi kami di 021 724 55 17 atau 021 727 973 02.
+                      | Produk yang dibeli lebih dari 100 pcs akan mendapat diskon lebih gila lagi
                     .header__info__newsticker__item
-                      | Fax kami di 021 726 30 83.
+                      | Nikmati segala layanan kami, harap hanya melakukan transaksi bedasarkan panduan yang ada di dalam website ini
                     .header__info__newsticker__item
-                      | Kunjungi kami di Jl. Hang Jebat III Blok F3, Kebayoran Baru, Jakarta Selatan 12120.
+                      | Hubungi kami di 021-001. Bebas pulsa!
                 .col-3.no-padding
                   .header__info__phone
                     i.fas.fa-envelope.fa-fw
-                    a href='mailto:puslatsdmkesehatan@gmail.com' puslatsdmkesehatan@gmail.com
+                    a href='mailto:help@grosirinaja.com' help@grosirinaja.com
                     i.fas.fa-fax.fa-fw
-                    a href='tel:0217263083' 0217263083
+                    a href='tel:021001' 021-001
 
         .row
           .header__primary.shadow-outset
@@ -62,51 +66,28 @@ html
                   a href="/"
                     = image_tag("logo-main.png")
               .col-8
-                .d-flex.justify-content-center
+                .d-flex.justify-content-end
                   nav
                     ul.header__primary__menu.d-flex
                       a href="/"
-                        li Beranda
-                      li.header__primary__menu__parent
-                        | Profil
-                        ul.header__primary__menu__children.shadow-outset-sm
-                          a.color-black href="/visi"
-                            li Visi & Misi
-                          a.color-black href="/sejarah"
-                            li Sejarah
-                          a.color-black href="/struktur-organisasi"
-                            li Struktur Organisasi
-                      li.header__primary__menu__parent 
-                        | Produk
-                        ul.header__primary__menu__children.shadow-outset-sm
-                          a.color-black href="#{}"
-                            li Kurikulum
-                          a.color-black href="#{}"
-                            li Jadwal Kegiatan
-                      li.header__primary__menu__parent 
-                        | Informasi
-                        ul.header__primary__menu__children.shadow-outset-sm
-                          a.color-black href="#{}"
-                            li Pengumuman
-                          a.color-black href="#{}"
-                            li Informasi
-                          a.color-black href="#{}"
-                            li Berita
+                        li Home
                       a href="#{}" 
-                        li Forum
+                        li Products
+                      a href="#{}" 
+                        li Merchant
                       a href="" 
-                        li Kontak Kami
+                        li Contact
                       - if signed_in?
                         a href="#{sign_out_path}" method='delete' rel='nofollow' data-method='delete'
-                          li Keluar
+                          li Log Out
                       - else
                         li.header__primary__menu__parent
-                          | Akun
+                          | Account
                           ul.header__primary__menu__children.shadow-outset-sm
                             = link_to sign_in_path do
-                              li Masuk
-                            / = link_to new_register_path do
-                            /   li Daftar 
+                              li Log In
+                            = link_to new_register_path do
+                              li Register
 
       - flash.each do |name, msg|
         div class="flash flash__#{name}"
@@ -141,6 +122,8 @@ html
                       | Powered by 
                       b Wellcode Global &copy;
   
+    - unless ['sessions'].include? params[:controller]
+      = javascript_include_tag params[:controller]
     / = javascript_include_tag "all.js"
     / - if %w(contacts homes).include? params[:controller]
     /   = javascript_include_tag params[:controller]
